[package]
authors = ['Logion Team <https://github.com/logion-network>']
description = 'Pallet implements Logion verified recovery.'
edition = '2021'
homepage = 'https://logion.network'
license = 'Apache-2.0'
name = 'pallet-verified-recovery'
readme = 'README.md'
repository = 'https://github.com/logion-network/pallet-verified-recovery'
version = '0.1.1'
keywords = ['logion']

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive", "max-encoded-len"] }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.31" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.31" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.31" }
logion-shared = { git = "https://github.com/logion-network/logion-shared", default-features = false, branch = "polkadot-v0.9.31" }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.145", features = ["derive"] }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.31" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.31" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.31" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.31" }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'logion-shared/std',
	'scale-info/std',
	'serde/std',
	'sp-std/std',
]
runtime-benchmarks = [
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system/runtime-benchmarks',
]
try-runtime = ['frame-support/try-runtime']
